Sorted the alignment issues with the social icons widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1723,6 +1723,10 @@ footer.bk-footer .widget.profile span {
   color: lighten(@color-swatch5,10%);
 }
 
+footer.bk-footer .widget.profile .bk-profile-socialicons span {
+  display: inline-block;
+}
+
 .widget.profile a {
   color: lighten(@color-swatch5,10%);
 }
